# docs/swagger.json
@@ -68,7 +68,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Mahasiswa"
+                            "$ref": "#/definitions/model.MahasiswaRequest"
                         }
                     }
                 ],
@@ -321,8 +321,7 @@
             "type": "object",
             "properties": {
                 "_id": {
-                    "type": "string",
-                    "example": "123456abcdef"
+                    "type": "string"
                 },
                 "alamat": {
                     "$ref": "#/definitions/model.Alamat"
